# tradebot

./: README.md  pyproject.toml
tests/: test_bybit.py
tradebot/: config.py
