[tool.poetry]
name = "tradebot"
version = "0.0.1"
description = "tradebot"
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sasano8/tradebot"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
ccxt = "^1.46.44"
six = "^1.15.0"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
